# tgxp

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  tgxp.cbp
.cmake/api/v1/reply/: cache-v2-16873c17fa84cb745d09.json  cache-v2-451a1789fb6862b1e7a8.json  cmakeFiles-v1-925269e66a5e8c48958e.json  codemodel-v2-3d5027073eaa767cd25d.json  codemodel-v2-6b829411b4b07a435987.json  index-2022-05-07T12-27-28-0306.json  index-2022-05-07T17-54-22-0195.json  target-circle-Debug-1ae1f7c5d98f2edab423.json  target-test-Debug-c0be8cab4556fb3d1c51.json  target-tgxp-Debug-aa32461408d4003ec7b5.json  target-tgxp-Debug-fec92444e3c490293b13.json
dev/: tgxp.h
plugins/: circle.c  plugin.lua  test.c
plugins/rect/: plugin.lua
src/: cli.c  cli.h  const.h  cpr.c  cpr.h  env.c  env.h  errc.c  errc.h  main.c  msg.h  parse.c  proc.c  proc.h  strhlp.h  ufs.c  ufs.h
src/cmd/: attach.c  init.c  intern.h  rect.h  set.c
src/plug/: luai.c  luai.h
src/tgxpf/: tgxpf.c  tgxpf.h
tgxp/: cli.c  cli.h  const.h  cpr.c  env.c  env.h  main.c  parse.c  parse.h  proc.c  proc.h  strhlp.c  umath.c  umath.h
tgxp/cmd/: attach.c  attach.h  color.c  color.h  commit.c  commit.h  detach.c  detach.h  include.h  init.c  init.h  intern.h  set.c  set.h
tgxp/dms/: dms.c  dms.h  modl.h
tgxp/tgxpf/: tgxpf.c
